# stm32f7-demo-project

./: Cargo.toml
src/: main.rs
