[package]
name = "stm32f7-test"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
panic-halt = "0.2.0"
stm32f7xx-hal = { path = "/home/mborges/git/stm32f7xx-hal/", features = ["stm32f746", "rt"] }
